# selenium-py-fb

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
selenium_py_fb/: __init__.py  __main__.py
selenium_py_fb/_config/: log.py
selenium_py_fb/core/browser/: likes_struct.py  manager.py
